--- a/templates/entreprise/ficheEco.html.twig
+++ b/templates/entreprise/ficheEco.html.twig
@@ -38,6 +38,8 @@
               <div class="text-center">{{ listSchool.firstname }} {{ listSchool.lastname }}</div>
               <div class="text-center">{{ listSchool.phonePro }}</div>
               <div class="text-center">{{ listSchool.email }}</div>
+              <hr>
+              <div class="text-center"><a href="https://{{ listSchool.webPro }}" target="_blanck">{{ listSchool.webPro }}</a></div>
             </li>
           </ul>
         </div>
