--- a/templates/entreprise/ficheEnt.html.twig
+++ b/templates/entreprise/ficheEnt.html.twig
@@ -50,6 +50,14 @@
                   <td>{{ app.user.address }}</td>
                 </tr>
                 <tr>
+                  <td>Code postal :</td>
+                  <td>{{ app.user.zipcode }}</td>
+                </tr>
+                <tr>
+                  <td>Ville : </td>
+                  <td>{{ app.user.city }}</td>
+                </tr>
+                <tr>
                   <td>Téléphone : </td>
                   <td>{{ app.user.phone }}</td>
                 </tr>
