--- a/templates/student/index.html.twig
+++ b/templates/student/index.html.twig
@@ -30,9 +30,9 @@
                         <button name="submit" type="submit" class="btn btn-primary">Envoyer</button>
                          <a class="mailboxFlip btn btn-danger text-white" name="mailboxFlip" id="mailboxFlip">Boîte de réception</a>
                     </div>
-        
-                        
-              
+
+
+
                 <div class="d-flex align-content-center flex-column mt-3" id="mailboxToggle">
                     {% for message in reception %}
                         <h2 class="text-center"> {{message.title}}</h2>
@@ -63,7 +63,7 @@
 
 
                  </div>
-                 
+
             </div>
 
             <div class="d-flex justify-content-center">
@@ -73,8 +73,9 @@
 
         <div class="col-sm-12 col-lg-8 col-md-12 mb-5">
             <div class="d-flex justify-content-center profilImage">
-                <img src="{{asset('assets/uploads/' ~ filePath)}}" alt="" id="profilImage" srcset="">
+                {#<img src="{{asset('assets/uploads/' ~ filePath)}}" alt="" id="profilImage" srcset="">#}
             </div>
+
 
 <div class="sandbox col-12">
 
@@ -83,7 +84,7 @@
                 <h1 class="display-3 d-flex justify-content-center">Vos fichiers</h1>
 
                     {% embed "filemanager.html.twig" %}
-                        
+
                     {% endembed %}
                 </div>
             </div>
@@ -94,10 +95,10 @@
 <div class=" actualityDiv mt-5">
 
         <ul class="col-sm-12 col-lg-12 col-md-12 jumbotron actuality mt-3" id="actuality">
-            
+
 
         </ul>
-    
+
     </div>
 {% endblock %}
 
@@ -114,8 +115,8 @@
 
     <!-- Fin Joobble API recherche -->
     <script type="text/javascript" src="{{asset('assets/js/SearchBox.js')}}" language="javascript"></script>
-    
-    
+
+
     <script>
 
         var searchBox = new JSearchBox('jsb_container', 0, '320', '7', '#0000ff', '#60bf60', '#555555', '#ffffff', '#0000ff', '#555555', '#60bf60', 'Verdana', '11', '#b1b1b3', '', '');
@@ -142,7 +143,7 @@
                         titreArticles.innerHTML = article.title;    //On lui rajoute du texte
                         let listeTitreArticles = document.querySelector('#actuality');    //On sélectionne une liste
                         listeTitreArticles.appendChild(titreArticles);    //On lui ajoute la balise <li> précédemment créée
-                     
+
                         let contenuArticles = document.createElement('p');    //On créer une nouvelle balise <li>
                         contenuArticles.className = "text-lead content";
 
@@ -151,8 +152,8 @@
                         let listeContenuArticles = document.querySelector('#actuality');    //On sélectionne une liste
                         listeContenuArticles.appendChild(contenuArticles);    //On lui ajoute la balise
 
-                      
-                    
+
+
 
         };//Fermeture fetch
 })
@@ -167,7 +168,7 @@
 
     $(document).ready(function(){
 
-     
+
      $('#mailboxFlip').on("click", function(event){
             event.preventDefault();
             $("#mailboxToggle").slideToggle();  //ou slideToggle
