--- a/templates/entreprise/ficheEco.html.twig
+++ b/templates/entreprise/ficheEco.html.twig
@@ -12,11 +12,10 @@
 
 
   <section class="container">
-    <div class="row">
-      <div class="col-12 d-flex justify-content-center flex-wrap my-3">
-        <h4>Centre de Formation</h4>
+    <div class="col-12">
+        <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Centre de Formation</h4>
+        <hr class="mb-5">
       </div>
-    </div>
     <div class="row">
 
       <div class="col-12 col-md-5 d-flex justify-content-center">
