--- a/templates/entreprise/ficheEtu.html.twig
+++ b/templates/entreprise/ficheEtu.html.twig
@@ -12,15 +12,16 @@
 
 
   <section class="container">
-      <div class="col-12 d-flex justify-content-center flex-wrap my-3">
-        <h4>Liste des Etudiants</h4>
+      <div class="col-12">
+        <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Liste des Etudiants</h4>
+        <hr class="mb-5">
       </div>
 
       <div class="col-12 d-flex justify-content-center flex-wrap my-3">
-        <nav class="navbar navbar-light bg-light">
-          <button data-filter="" class="btn btn-info btn-filter clear-button active-filter mx-2 my-3">TOUTES FORMATIONS </button>
+        <nav class="navbar">
+          <button data-filter="" class="btn text-light btnChasse rounded-pill btn-filter clear-button active-filter mx-2 my-3">TOUTES FORMATIONS </button>
           {% for sectionFilter in sectionList %}
-            <button data-filter="{{ sectionFilter.name }}" class="btn btn-info btn-filter mx-2 my-3">{{ sectionFilter.name }}</button>
+            <button data-filter="{{ sectionFilter.name }}" class="btn text-light btnChasse rounded-pill btn-filter mx-2 my-3">{{ sectionFilter.name }}</button>
           {% endfor %}
         </nav>
       </div>
@@ -30,18 +31,20 @@
 
       {% for student_listing in studentList %}
         <div class="card mx-2 my-2 project {{ student_listing.formation }}" style="width: 18rem;">
-          <img src="{{asset('assets/img/man.png')}}" class="card-img-top" alt="...">
-          <div class="card-body">
+          {#<img src="{{asset('assets/img/man.png')}}" class="card-img-top" alt="...">#}
+          <div class="card-body d-flex justify-content-center">
             <h5 class="card-title text-center">{{ student_listing.lastname }} {{ student_listing.firstname }}</h5>
-            <p class="card-text text-center">{{ student_listing.formation }}</p>
+          </div>
+          <div class="card-body d-flex justify-content-center">
+            <h6 class="card-text btn text-light btnChasse rounded-pill btn-filter mx-2 my-3">{{ student_listing.formation }}</h6>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <div class="text-center"> CENTRE DE FORMATION :</div>
               <div class="text-center"> {{ student_listing.school }}</div>
             </li>
-            <li class="list-group-item"></li>
-            <li class="list-group-item"></li>
+            <li class="list-group-item">{{ student_listing.langages }}</li>
+            <li class="list-group-item">{{ student_listing.framework }}</li>
           </ul>
           <div class="card-body">
             <a type="button" class="btn btn-outline-info" href="{{ path('viewStu', {id: student_listing.id}) }}" class="card-link">en savoir plus</a>
