--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
   <section class="container">
-    <h3 class="text-center">IMAGE RGB</h3>
+    {#h3 class="text-center">IMAGE RGB</h3>#}
   </section>
 
 
@@ -15,9 +15,12 @@
 <section class="container-fluid mt-4">
   <div class="row">
     <div class="col-12 col-md-4">
-      <h4 class="text-center">Centre de formation</h4>
-      <hr>
-
+      <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Centre de formation</h4>
+      <hr class="mb-5">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
+        </div>
       {% for listSchool in indexSchool %}
         <div class="d-flex justify-content-center">
           <div class="card mx-2 my-2" style="width: 18rem;">
@@ -40,38 +43,49 @@
         </div>
       {% endfor %}
     </div>
+    </div>
 
 
     <div class="col-12 col-md-4">
-      <h4 class="text-center">Formations</h4>
-      <hr>
+      <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Les Formations</h4>
+      <hr class="mb-5">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
+        </div>
       {% for formation in indexFormation %}
         <ul class="list-group list-group-flush">
           <li class="list-group-item">{{ formation.name }} / <small>(Nbre) Elèves Inscrit</small></li>
         </ul>
       {% endfor %}
     </div>
+    </div>
 
 
     <div class="col-12 col-md-4">
-      <h4 class="text-center">Langages et outils</h4>
-      <hr>
-      <div class="row">
-        <div class="col-12 col-sm-12 col-lg-6">
-          <h6>Languages</h6>
-          {% for lang in indexLangages %}
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">{{ lang.langage }}</li>
-            </ul>
-          {% endfor %}
+      <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Langages et outils</h4>
+      <hr class="mb-5">
+      <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCards"></div>
         </div>
-        <div class="col-12 col-sm-12 col-lg-6">
-          <h6>Outils/Framework</h6>
-          {% for frame in indexFramework %}
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">{{ frame.name }}</li>
-            </ul>
-          {% endfor %}
+        <div class="row">
+          <div class="col-12 col-sm-12 col-lg-6">
+            <h6>Languages</h6>
+            {% for lang in indexLangages %}
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">{{ lang.langage }}</li>
+              </ul>
+            {% endfor %}
+          </div>
+          <div class="col-12 col-sm-12 col-lg-6">
+            <h6>Outils/Framework</h6>
+            {% for frame in indexFramework %}
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">{{ frame.name }}</li>
+              </ul>
+            {% endfor %}
+          </div>
         </div>
       </div>
     </div>
