Coninuité css et mise en forme

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -103,7 +103,7 @@
 
         </ul>
         <!-- CONNECT / DISCONNECT -->
-        <div class="form-inline my-2 text-white">
+        <div class="form-inline my-2">
           {% if is_granted('ROLE_ENTREPRISE') %}
               <div class="my-1">Bonjour {{ app.user.firstname }}</div>
           {% endif %}
