--- a/templates/entreprise/ficheEnt.html.twig
+++ b/templates/entreprise/ficheEnt.html.twig
@@ -24,7 +24,11 @@
 
     <!--==== SECTION LISTE ETUDIANTS ====-->
     <section class="container mt-5">
-      <h1 class="text-center">Profil : {{ app.user.identity }}</h1>
+      <div class="col-12">
+        <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Profil de l'entreprise</h4>
+        <hr class="mb-5">
+      </div>
+      <h3 class="text-center">{{ app.user.identity }}</h3>
       <hr>
 
       <div class="container-fluid mt-5 mx-1">
@@ -34,7 +38,7 @@
           </div>
           <div class="row">
             <div class="col-12 col-md-5">
-              <h5 class="text-center">Informations personnelles
+              <h5 class="text-center mb-5">Informations personnelles
                 <button type="button" class="btn btn-info btn-sm rounded-circle" data-toggle="tooltip" data-placement="right" title="informations personnelles modifiable">?
                 </button>
               </h5>
@@ -82,7 +86,7 @@
               <a type="button" class="btn text-light btnChasse rounded-pill" href="{{ path('modifficheEnt', {id: app.user.id }) }}">Modifier</a>
             </div>
             <div class="col-12 col-md-7">
-              <h5 class="text-center">Identité de votre entreprise
+              <h5 class="text-center mb-5">Identité de votre entreprise
                 <button type="button" class="btn btn-info btn-sm rounded-circle" data-toggle="tooltip" data-placement="right" title="informations depuis api siren">?
                 </button>
               </h5>
