--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -1,7 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Section Entreprise{% endblock %}
-{% block stylesheets %} {% endblock %}
+{% block stylesheets %}
+
+<style type="text/css">
+
+
+</style>
+
+{% endblock %}
 
 {% block body %}
   <section class="container">
@@ -19,7 +26,7 @@
       <hr class="mb-5">
       <div class="jumbotron jumbotronActivites">
         <div class="d-flex justify-content-center">
-          <div class="rounded-circle rondCards"></div>
+          <div class="rounded-circle rondCardsblue"></div>
         </div>
       {% for listSchool in indexSchool %}
         <div class="d-flex justify-content-center">
@@ -51,6 +58,9 @@
       <hr class="mb-5">
       <div class="jumbotron jumbotronActivites">
         <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCardsgreen"></div>
+        </div>
+        <div class="d-flex justify-content-center">
           <div class="rounded-circle rondCards"></div>
         </div>
       {% for formation in indexFormation %}
@@ -66,6 +76,9 @@
       <h4 class="btn text-light btnChasse rounded-pill d-flex justify-content-center">Langages et outils</h4>
       <hr class="mb-5">
       <div class="jumbotron jumbotronActivites">
+        <div class="d-flex justify-content-center">
+          <div class="rounded-circle rondCardsred"></div>
+        </div>
         <div class="d-flex justify-content-center">
           <div class="rounded-circle rondCards"></div>
         </div>
