--- a/templates/school/view_ent.html.twig
+++ b/templates/school/view_ent.html.twig
@@ -29,7 +29,7 @@ color: #4285F4;
            <h2>{{users.identity}}</h2><br>
 
          <table class="table">
-      <tbody>
+       <tbody>
           <tr>
            <th>Nom entreprise</th>
             <td>{{users.identity }}</td>
@@ -98,7 +98,7 @@ color: #4285F4;
           </tbody>
         </table>
           <a class="btn btn-outline-warning " href="{{ path('list_valid') }}" class="text-success">Retour</a>
-
+          <a type="submit" class="btn btn-outline-success" href="{{ path('list_valid') }}">Comfirmer</a>
       </form>
     </div>
   </div>
