--- a/templates/entreprise/ficheEtu.html.twig
+++ b/templates/entreprise/ficheEtu.html.twig
@@ -66,7 +66,11 @@ button {
 
       {% for student_listing in studentList %}
         <div class="card mx-2 my-2 project {{ student_listing.formation }}" style="width: 18rem;">
-          <img src="{{asset('assets/img/' ~ filePath)}}" class="card-img-top" alt="...">
+          {#{% if profile in filePath %}
+            <img src="{{asset('assets/img/' ~ filePath)}}" class="card-img-top" alt="...">
+          {% else %}
+            <img src="{{asset('assets/img/profile.png')}}" class="card-img-top" alt="...">
+          {% endif %}#}
           <div class="card-body d-flex justify-content-center">
             <h5 class="card-title text-center">{{ student_listing.lastname }} {{ student_listing.firstname }}</h5>
           </div>
