Ajouts templates student

--- a/templates/filemanager.html.twig
+++ b/templates/filemanager.html.twig
@@ -12,7 +12,7 @@
                 <iframe src="{{asset('assets/uploads/' ~ upload.filePath)}}"></iframe>
 
 
-                <div class="card-body">
+                <div class="card-body text-center">
                     <h5 class="card-title">{{upload.title}}</h5>
                     <p class="card-text">Mon super fichier !</p>
                     <a href="#" class="btn btn-primary">Télécharger</a>
