Mise à jour BDD

--- a/templates/school/list_valid.html.twig
+++ b/templates/school/list_valid.html.twig
@@ -10,16 +10,16 @@
       <style>
       body{
         background-color:#f2f2f2;
+      }
 
-      }
       h1{
-        color: #4285F4;
+        font-size:4rem;
+        background-color:#b54447;
       }
+
       .table{
         background-color:#d9d9d9;
       }
-
-
 
       .filterable {
         margin-top: 15px;
@@ -55,15 +55,12 @@
 
     <h1 class="text-center my-5"><strong>Registre d'utilisateurs</strong></h1>
 
-
-
     <div class="container-fluid  my-5">
       <div class="row">
 
-
         <div class="panel panel-primary filterable">
           <div class="panel-heading">
-            <h1 class"text-center">Registre entreprise</h1>
+            <h2 class"text-center">Registre entreprise</h2>
             <div class="pull-right">
               <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> FILTRE</button>
             </div>
@@ -113,10 +110,9 @@
   <div class="container-fluid my-5 mt-5">
     <div class="row">
 
-
       <div class="panel panel-primary filterable">
         <div class="panel-heading">
-          <h1 class="">Registre élèves</h1>
+          <h2 class="">Registre élèves</h2>
           <div class="pull-right">
             <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> FILTRE</button>
           </div>
