--- a/templates/school/add_ent.html.twig
+++ b/templates/school/add_ent.html.twig
@@ -10,19 +10,30 @@
 	 background-color:#f2f2f2;
 
 }
-h1,label{
-color: #4285F4;
+h1{
+font-size:4rem;
+background-color:#b54447;
+color:white;
+}
+h2{
+  font-size:3rem;
 }
 #form{
-  background-color:#d9d9d9;
+background-color:#d9d9d9;
+
 }
 	</style>
 {% endblock styles %}
 
 
-<div>
-  <h1 class="text-center my-5"><strong>Enregistrement manuelle</strong></h1>
-    <div  id="form" class="container border mt-5 p-2">
+
+
+<h1 class="text-center my-5">
+	Enregistrement étudient<a href="{{ path('school_index') }}">
+		<img src="{{asset('assets/img/ent.png')}}" class=" m-5" alt="icon bdd"></a>
+</h1>
+<br>
+
 
   {% if status_form is not null and status_form == true %}
     <div class="alert alert-success text-center">
@@ -35,11 +46,12 @@ color: #4285F4;
       {{ errors_form|join('<br>')|raw }} {# équivalent du implode('<br>', $errors) #}
     </div>
   {% endif %}
+  <div id="form" class="container">
     <div class="row ">
       <div class="col ">
         <form method="post" class="m-5 justify-content-center">
           <div class="form-row mb-3  ">
-            <label for="name_ent" class="col-form-label col-4">Nom entreprise</label>
+            <label for="name_ent" class="col-form-label text-danger col-4">Nom entreprise</label>
             <div for="name_ent" class="col-8">
               <input type="text" name="name_ent" id="name_ent" class="form-control" placeholder="Nom entreprise"
                 value="{{ post.indentity ?? '' }}">
@@ -47,7 +59,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4">Adresse</label>
+            <label class="col-form-label text-danger col-4">Adresse</label>
             <div for="address_pro" class="col-8">
               <input type="text" name="address_pro" id="address_pro" class="form-control" placeholder="Votre adresse"
                 value="{{ post.adress_pro ?? '' }}">
@@ -55,7 +67,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4">Code postale</label>
+            <label class="col-form-label text-danger col-4">Code postale</label>
             <div for="zipcode_pro" class="col-8">
               <input type="text" name="zipcode_pro" id="zipcode_pro" class="form-control"
                 placeholder="Votre code postale" value="{{ post.zipcode_pro ?? '' }}">
@@ -63,7 +75,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="num_siret" class="col-form-label col-4">N° Siret</label>
+            <label for="num_siret" class="col-form-label text-danger col-4">N° Siret</label>
             <div for="num_siret" class="col-8">
               <input type="text" name="num_siret" id="num_siret" class="form-control" placeholder="N° Siret"
                 value="{{ post.siret ?? '' }}">
@@ -71,7 +83,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4">Email</label>
+            <label class="col-form-label text-danger col-4">Email</label>
             <div class="col-8">
               <input type="email" name="email" id="email" class="form-control" placeholder="Votre email"
                 value="{{ post.email_pro ?? '' }}">
@@ -79,7 +91,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4" for="Password">Password</label>
+            <label class="col-form-label text-danger col-4" for="Password">Password</label>
             <div for="phone" class="col-8">
               <input type="password" name="password" id="Password" class="form-control"
                 placeholder="Votre mot de passe ">
@@ -87,14 +99,14 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4" for="passwordConfirm">Confirmation Password</label>
+            <label class="col-form-label text-danger col-4" for="passwordConfirm">Confirmation Password</label>
             <div for="phone" class="col-8">
               <input type="password" name="passwordConfirm" id="passwordConfirm" class="form-control"
                 placeholder="Veuillez confirmer votre mot de passe ">
             </div>
           </div>
           <div class="text-center">
-            <a href="{{ path('school_index')}}" class="btn  btn-outline-warning">Retour</a>
+           
             <button type="submit" class="btn btn-outline-success ">Inscription </button>
           </div>
       </div>
@@ -102,7 +114,9 @@ color: #4285F4;
   </div>
  </div>
 </div>
+</div>
 <br>
+<a href="{{ path('school_index') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-5 bg-warning p-4" alt="icon bdd"></a>
 
 {% endblock %}
 
