--- a/templates/school/add_student.html.twig
+++ b/templates/school/add_student.html.twig
@@ -8,13 +8,18 @@
 	<style>
 		body {
 	 background-color:#f2f2f2;
-
 }
-h1,label{
-color: #4285F4;
+h1{
+font-size:4rem;
+background-color:#b54447;
+color:white;
+}
+h2{
+  font-size:3rem;
 }
 #form{
-  background-color:#d9d9d9;
+background-color:#d9d9d9;
+
 }
 	</style>
 {% endblock styles %}
@@ -22,7 +27,15 @@ color: #4285F4;
 
 <div>
 
-  <h1 class="text-center my-5"><strong>Enregistrement manuel</strong></h1>
+ 
+
+<h1 class="text-center my-5">
+	Enregistrement manuel<a href="{{ path('school_index') }}">
+		<img src="{{asset('assets/img/student.png')}}" class=" m-5" alt="icon bdd"></a>
+</h1>
+<br>
+
+
    <div id="form" class="container border mt-5 p-2">
 
   {% if status_form is not null and status_form == true %}
@@ -40,7 +53,7 @@ color: #4285F4;
       <div class="col ">
         <form method="post" class="m-5 justify-content-center">
           <div class="form-row mb-3  ">
-            <label for="firstname" class="col-form-label col-4">Prénom</label>
+            <label for="firstname" class="col-form-label text-danger col-4">Prénom</label>
             <div for="firstname" class="col-8">
               <input type="text" name="firstname" id="firstname" class="form-control" placeholder="Prénom"
                 value="{{ post.firstname ?? '' }}">
@@ -48,7 +61,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4">Nom</label>
+            <label class="col-form-label text-danger col-4">Nom</label>
             <div for="lastname" class="col-8">
               <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Nom"
                 value="{{ post.lastname ?? '' }}">
@@ -56,7 +69,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="address" class="col-form-label col-4">Adresse</label>
+            <label for="address" class="col-form-label text-danger col-4">Adresse</label>
             <div for="address" class="col-8">
               <input type="text" name="address" id="address" class="form-control" placeholder="adresse"
                 value="{{ post.address ?? '' }}">
@@ -64,7 +77,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="zipcode" class="col-form-label col-4">Code postale</label>
+            <label for="zipcode" class="col-form-label text-danger col-4">Code postale</label>
             <div for="zipcode" class="col-8">
               <input type="text" name="zipcode" id="zipcode" class="form-control" placeholder="Code postale"
                 value="{{ post.zipcode ?? '' }}">
@@ -72,7 +85,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="city" class="col-form-label col-4">Ville</label>
+            <label for="city" class="col-form-label text-danger col-4">Ville</label>
             <div for="city" class="col-8">
               <input type="text" name="city" id="city" class="form-control" placeholder="Ville"
                 value="{{ post.city ?? '' }}">
@@ -80,7 +93,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="phone" class="col-form-label col-4">Numéro de téléphone</label>
+            <label for="phone" class="col-form-label text-danger col-4">Numéro de téléphone</label>
             <div for="phone" class="col-8">
               <input type="text" name="phone" id="phone" class="form-control" placeholder="Numéro de téléphone"
                 value="{{ post.phone ?? '' }}">
@@ -88,7 +101,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label for="birthdate" class="col-form-label col-4">Date de naissance</label>
+            <label for="birthdate" class="col-form-label text-danger col-4">Date de naissance</label>
             <div for="birthdate" class="col-8">
               <input type="date" name="birthdate" id="birthdate" class="form-control" placeholder="Date de naissance"
                 value="{{ post.birthdate ?? '' }}">
@@ -97,7 +110,7 @@ color: #4285F4;
           <hr>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4">Email</label>
+            <label class="col-form-label text-danger col-4">Email</label>
             <div class="col-8">
               <input type="email" name="email" id="email" class="form-control" placeholder="Votre email"
                 value="{{ post.email ?? '' }}">
@@ -105,7 +118,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4" for="Password">Password</label>
+            <label class="col-form-label text-danger col-4" for="Password">Password</label>
             <div for="phone" class="col-8">
               <input type="password" name="password" id="Password" class="form-control"
                 placeholder="Votre mot de passe ">
@@ -113,7 +126,7 @@ color: #4285F4;
           </div>
           <hr>
           <div class="form-row  mb-3">
-            <label class="col-form-label col-4" for="passwordConfirm">Confirmation Password</label>
+            <label class="col-form-label text-danger col-4" for="passwordConfirm">Confirmation Password</label>
             <div for="phone" class="col-8">
               <input type="password" name="passwordConfirm" id="passwordConfirm" class="form-control"
                 placeholder="Veuillez confirmer votre mot de passe ">
@@ -121,7 +134,7 @@ color: #4285F4;
           </div>
 
           <div class="text-center mt-5">
-            <a href="{{ path('school_index')}}" class="btn  btn-outline-warning">Retour</a>
+           
             <button type="submit" class="btn btn-outline-success ">Inscription </button>
           </div>
        </div>
@@ -130,6 +143,8 @@ color: #4285F4;
   </div>
 </div>
 <br>
+<a href="{{ path('school_index') }} "class=" text-info"><img src="{{asset('assets/img/back.png')}}"  class=" m-5 bg-warning p-4" alt=" icon bdd"></a>
+
 
 {% endblock %}
 
