--- a/templates/school/view_ent.html.twig
+++ b/templates/school/view_ent.html.twig
@@ -8,10 +8,14 @@
 	<style>
 	body{
   background-color:#f2f2f2;
-
-}
+  }
 h1{
-color: #4285F4;
+font-size:4rem;
+background-color:#b54447;
+color:white;
+}
+h2{
+  font-size:3rem;
 }
 .table{
   background-color:#d9d9d9;
@@ -19,70 +23,75 @@ color: #4285F4;
 	</style>
 {% endblock styles %}
 
+<h1 class="text-center my-5">
+  Entreprise<a href="{{ path('list_valid') }}">
+    <img src="{{asset('assets/img/ent.png')}}" class=" m-5" alt="icon bdd"></a>
+</h1>
+<br>
 
 <div class="container  justify-content-center my-5">
   <div class="row">
     <div class="col justify-content-center">
-        <h1 class="text-center my-5">Entreprise</h1>
+    
 
          <form method="post" class="justify-content-center">
-           <h2>{{users.identity}}</h2><br>
+           <h2 class="text-center">{{users.identity}}  :  N° Siret{{users.siret}}</h2><br>
 
          <table class="table">
        <tbody>
           <tr>
-           <th>Nom entreprise</th>
+           <th class="text-danger">Nom entreprise</th>
             <td>{{users.identity }}</td>
           </tr>
 
 
           <tr>
-            <th>Adresse</th>
+            <th class="text-danger">Adresse</th>
             <td>{{users.adressPro}}</td>
           </tr>
 
           <tr>
-            <th>Code postale</th>
+            <th class="text-danger">Code postale</th>
             <td>{{users.zipcodePro}}</td>
           </tr>
 
           <tr>
-            <th>Ville</th>
+            <th class="text-danger">Ville</th>
              <td>{{users.cityPro}}</td>
           </tr>
 
           <tr>
-            <th>Numero de teléphone</th>
+            <th class="text-danger">Numero de teléphone</th>
             <td>{{users.phonePro}}</td>
          </tr>
 
           <tr>
-            <th>N° Siret </th>
+            <th class="text-danger">N° Siret </th>
              <td>{{users.siret}}</td>
           </tr>
 
           <tr>
-             <th>N° Siren</th>
+             <th class="text-danger">N° Siren</th>
               <td>{{users.siren}}</td>
           </tr>
 
           <tr>
-             <th> NIC </th>
+             <th class="text-danger"> NIC </th>
             <td>{{users.nic}}</td>
           </tr>
 
           <tr>
-            <th>Code APE </th>
+            <th class="text-danger">Code APE </th>
               <td>{{users.apeCode}}</td>
           </tr>
 
           <tr>
-             <th>Email</th>
+             <th class="text-danger">Email</th>
               <td>{{users.email}}</td>
           </tr>
 
            <tr>
-             <th>Validation manuelle</th>
+             <th class="text-danger">Validation manuelle</th>
               <td>
               <div class="custom-control custom-switch">
                 <input type="checkbox" name="validate_ape" class="custom-control-input" id="switchAccept" {{ viewAccept }}>
@@ -92,17 +101,19 @@ color: #4285F4;
           </tr>
 
            <tr>
-               <th>Date d'enregistrement</th>
+               <th class="text-danger">Date d'enregistrement</th>
                 <td>{{users.dateRegistration|date('d/m/Y  H:i') }}</td>
           </tr>
           </tbody>
         </table>
-          <a class="btn btn-outline-warning " href="{{ path('list_valid') }}" class="text-success">Retour</a>
+         
           <a type="submit" class="btn btn-outline-success" href="{{ path('list_valid') }}">Comfirmer</a>
       </form>
     </div>
   </div>
 </div>
+<a href="{{ path('list_valid') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}" class="m-5 bg-warning p-4" alt="icon bdd"></a>
+
 {% endblock %}
 
 
